# onlydole

./: .codespellrc  .gitignore  .lychee.yml  .prettierignore  PERFORMANCE_IMPROVEMENTS.md  README.md  biome.json  lychee.toml  pyproject.toml  setup.cfg
.github/linters/: .markdown-lint.yml  .markdownlint.yaml  .python-lint
.github/workflows/: 3d-contrib.yml  blog-posts.yml  build-profile.yml  ci.yml  linkchecker.yml  snake.yml  superlinter.yml
.serena/: project.yml
assets/: data-cache.json
data/: reading.yaml  talks.yaml
docs/superpowers/plans/: 2026-06-10-profile-bento-dashboard.md  2026-06-11-goodreads-vertical.md  2026-06-11-talks-feed-consumer.md
docs/superpowers/specs/: 2026-06-10-profile-readme-design.md  2026-06-11-goodreads-vertical-design.md
generator/: api_commit.py  build.py  pyproject.toml  readme.py  render.py  sources.py
generator/templates/: chip.svg.j2  hero.svg.j2  tile.svg.j2
lychee/: out.md
tests/: golden_cases.py  test_api_commit.py  test_build.py  test_readme.py  test_render.py  test_sources.py  update_goldens.py
tests/fixtures/: activity.json  goodreads.xml  substack.xml  talks.xml
