[project]
name = "profile-generator"
version = "1.0.0"
description = "Generates the bento dashboard for onlydole/onlydole"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "flake8>=7.3.0",
    "isort>=8.0.1",
    "pylint>=4.0.5",
    "pytest>=8.0",
]
